# mktml

./: .gitignore  PUBLIC_RELEASE.md  README.md  dashboard.py  main.py  ml_engine.py  overview.md  pyproject.toml  requirements.txt
.githooks/: pre-push
examples/public/: .env.example  README.md  config.public.example.py  market_report.sample.md
examples/public/launchd/: README.md  com.market-dashboard.plist  com.market-nightly-postcheck.plist
scripts/: backup.py  build_model_manifest.py  check_macro_units.py  check_model_features.py  check_model_runtime_skew.py  check_qual.py  cleanup_recs.py  debug_db.py  debug_quota.py  generate_analytics_snapshot.py  install_nightly_postcheck_launchd.sh  migrate_db.py  migrate_model_artifacts.py  nightly_full_with_postcheck.sh  postcheck_after_full_run.sh  public_push_guard.sh  smoke_postcheck.sh  start_dashboard.sh  stop_dashboard.sh  test_rate_limiter.py  train.py  update_qual_features.py  update_yields.py  validate_replay_calibration_integration.py  validate_replay_reproducibility.py  verify_backoff.py
src/: audit.py  backtest.py  dashboard.py  data_loader.py  eta_tracker.py  macro_loader.py  main.py  ml_engine.py  news_loader.py  notifier.py  rate_limiter.py  remote_scheduler.py  reporter.py  safe_logger.py  scanner.py  sector_country.py  signals.py  storage.py  universe.py
tests/: verify_refactor.py
